expanded articles by clippy

--- a/article1.html
+++ b/article1.html
@@ -22,7 +22,13 @@
     </nav>
     <section>
         <h2>Bizarre Incident at Church</h2>
-        <p>Atlanta police are scratching their heads after a man claimed to be attacked by a ghostly figure near a popular church. Witnesses report seeing a shadowy creature wielding an ethereal knife. The man, miraculously unscathed by the supernatural weapon, ran for his life and sought refuge in a nearby apartment complex.</p>
+        <p><em>By Clippy</em></p>
+        <p>Atlanta police are scratching their heads after a man claimed to be attacked by a ghostly figure near a popular church. Witnesses report seeing a shadowy creature wielding an ethereal knife. The man, miraculously unscathed by the supernatural weapon, ran for his life and sought refuge in a nearby apartment complex. The incident has left the community in shock.
+        </p>
+        <p>According to eye-witnesses, the ghostly figure appeared out of thin air just as the victim, Mr. John Smith, was passing the church on his evening stroll. Mr. Smith recalls the chilling encounter vividly: "I felt a cold breeze, and suddenly, I saw this shadowy figure with a knife. It lunged at me without a sound!"</p>
+        <p>Local authorities are leaving no stone unturned in their investigation. Detective Sarah Lane, leading the case, stated to the press, "This is a peculiar case. We haven’t encountered an incident like this before, and we are exploring all possible leads, including the paranormal."</p>
+        <p>Meanwhile, spiritual experts and paranormal investigators have flocked to the site, hoping to catch a glimpse of the ghostly figure. Reverend James of the church added, "We believe this could be a sign, perhaps a message from beyond. Or just a prankster with a clever disguise!"</p>
+        <p>The community is on edge as more reports of ghost sightings surface. Whether it's a hoax or a genuine supernatural occurrence, one thing is certain – West Midtown will never be the same.</p>
     </section>
 </body>
 </html>
