--- a/article2.html
+++ b/article2.html
@@ -22,7 +22,12 @@
     </nav>
     <section>
         <h2>Secret Society Under Investigation</h2>
+        <p><em>By Clippy</em></p>
         <p>A spotlight shines on the Nor-Cal Novas as authorities unveil a secret society of Chevy Nova enthusiasts. Attendees at the recent car show were astonished to discover hidden messages etched into the vehicles, hinting at an underground movement with mysterious goals. Investigators are delving deeper into the history of these seemingly innocent car gatherings.</p>
+        <p>The annual car show, known for its cheerful family-friendly atmosphere, took a dark turn when local law enforcement discovered cryptic codes and symbols hidden beneath the hoods and inside the glove compartments of various Chevy Novas on display. Inspector Daniels remarked, "We initially thought it was part of the car's decor, but upon closer inspection, it seems to be part of an enigmatic language. The implications are puzzling."</p>
+        <p>Rumors began swirling among the participants and spectators, suggesting the existence of a clandestine agenda. One car enthusiast, Ms. Serena Knight, shared her thoughts: "I’ve been coming to this event for years, and this is the first time I’ve heard whispers of a secret society. It’s thrilling yet unnerving at the same time."</p>
+        <p>The car show's organizers were quick to dismiss the allegations, claiming it to be a misunderstanding. Mr. Robert Vega, head of Nor-Cal Novas, stated, "We are a community of car lovers. Any inscriptions found on the cars are simply artistic expressions, not secret messages." Despite this reassurance, the investigation continues.</p>
+        <p>As speculation grows, enthusiasts find themselves torn between shock and fascination. The truth behind the mysterious codes remains to be uncovered, but one thing is clear: this year's car show will be talked about for a long time.</p>
     </section>
 </body>
 </html>
