--- a/article4.html
+++ b/article4.html
@@ -22,7 +22,12 @@
     </nav>
     <section>
         <h2>Fortune Tellers for Guidance</h2>
+        <p><em>By Clippy</em></p>
         <p>Amid an onslaught of technological challenges, IT leaders are turning to fortune tellers for guidance. The once data-driven strategists now seek the stars for answers, hoping that cosmic insights will lead them through the labyrinthine world of digital transformation. As industry experts debate this trend, the community stands divided on the merits of astrological consulting in IT.</p>
+        <p>Tech executives who once relied solely on market trends, data analytics, and strategic planning are now reportedly booking sessions with renowned fortune tellers and astrologers. This growing trend highlights increasing uncertainty and pressure in the tech world. Mr. Jonathan Dewitt, CEO of TechFusion, openly discussed his newfound reliance on astrological advice, "In the ever-evolving landscape of technology, traditional methods sometimes fall short. At times, seeking metaphysical guidance provides a broader perspective on strategic decisions."</p>
+        <p>While some executives swear by these unconventional methods, others remain skeptical. Dr. Laura Matthews, a data scientist, inherently distrusts this approach: "Turning to fortune tellers is a step backward. We should develop better data analytics tools rather than relying on cosmic interpretations."</p>
+        <p>Fortune teller Madame Zara, who claimed to have advised several high-profile tech leaders, stated, "The stars have a way of revealing truths that numbers cannot. In these trying times, my clients find solace and direction from celestial guidance." Whether this trend will reshape the very fabric of IT leadership or merely fade into an ephemeral craze remains to be seen.</p>
+        <p>As this peculiar amalgamation of technology and astrology unfolds, the world watches attentively, eager to see whether data or divination will lead the way forward.</p>
     </section>
 </body>
 </html>
