more updates by clippy

--- a/about.html
+++ b/about.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Clippy</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; }
-        header { background-color: #4CAF50; color: white; padding: 1em 0; }
-        nav { margin: 1em; }
-        nav a { margin: 0 15px; text-decoration: none; color: #4CAF50; font-size: 1.2em; }
-        section { padding: 2em; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>About Clippy</h1>
-    </header>
+    <header>About Clippy</header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="index.html" style="color: #4CAF50;">Home</a>
+        <a href="about.html" style="color: #fff;">About</a>
     </nav>
     <section>
         <h2>Who is Clippy?</h2>
