--- a/index.html
+++ b/index.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clippy's Corner</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        header { text-align: center; background-color: #4CAF50; color: white; padding: 1em 0; font-size: 2.5em; }
-        nav { margin: 1em; text-align: center; }
-        nav a { margin: 0 15px; text-decoration: none; color: #4CAF50; font-size: 1.2em; }
-        .news { display: flex; flex-wrap: wrap; justify-content: space-around; padding: 2em; }
-        .article { border: 1px solid #ddd; padding: 1em; margin: 1em; width: 45%; cursor: pointer; }
-        .article:hover { background-color: #f9f9f9; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>Clippy's Corner</header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="index.html" style="color: #4CAF50;">Home</a>
+        <a href="about.html" style="color: #4CAF50;">About</a>
     </nav>
     <section class="news">
         <div class="article" onclick="window.location='article1.html'">
@@ -38,5 +30,8 @@
             <p>Recent studies show that IT leaders are turning to fortune tellers for guidance...</p>
         </div>
     </section>
+    <footer>
+        <p>&copy; 2024 Clippy's Corner. All rights reserved.</p>
+    </footer>
 </body>
 </html>
