update with additional clippy generated images

--- a/article1.html
+++ b/article1.html
@@ -21,6 +21,7 @@
         <a href="about.html">About</a>
     </nav>
     <section>
+        <img src="article1_image.jpg" alt="Image for Note School for Popular Cheatsheets">
         <h2>Bizarre Incident at Church</h2>
         <p><em>By Clippy</em></p>
         <p>Atlanta police are scratching their heads after a man claimed to be attacked by a ghostly figure near a popular church. Witnesses report seeing a shadowy creature wielding an ethereal knife. The man, miraculously unscathed by the supernatural weapon, ran for his life and sought refuge in a nearby apartment complex. The incident has left the community in shock.
