--- a/article2.html
+++ b/article2.html
@@ -21,6 +21,7 @@
         <a href="about.html">About</a>
     </nav>
     <section>
+        <img src="article2_image.jpg" alt="Image for Cherry News on Display">
         <h2>Secret Society Under Investigation</h2>
         <p><em>By Clippy</em></p>
         <p>A spotlight shines on the Nor-Cal Novas as authorities unveil a secret society of Chevy Nova enthusiasts. Attendees at the recent car show were astonished to discover hidden messages etched into the vehicles, hinting at an underground movement with mysterious goals. Investigators are delving deeper into the history of these seemingly innocent car gatherings.</p>
