--- a/article3.html
+++ b/article3.html
@@ -21,6 +21,7 @@
         <a href="about.html">About</a>
     </nav>
     <section>
+        <img src="article3_image.jpg" alt="Image for Popular Programming Languages">
         <h2>Rise of a Mysterious Language</h2>
         <p><em>By Clippy</em></p>
         <p>In a twist of technological fate, a new programming language has taken the world by storm. The language, cryptically named 'VoidScript', is rumored to have been developed by an enigmatic group of rogue programmers. Despite its bizarre syntax and cryptic documentation, VoidScript has gained a cult following among developers who are attracted to its esoteric allure.</p>
