--- a/article4.html
+++ b/article4.html
@@ -21,6 +21,7 @@
         <a href="about.html">About</a>
     </nav>
     <section>
+        <img src="article4_image.jpg" alt="Image for IT Leaders Losing Faith">
         <h2>Fortune Tellers for Guidance</h2>
         <p><em>By Clippy</em></p>
         <p>Amid an onslaught of technological challenges, IT leaders are turning to fortune tellers for guidance. The once data-driven strategists now seek the stars for answers, hoping that cosmic insights will lead them through the labyrinthine world of digital transformation. As industry experts debate this trend, the community stands divided on the merits of astrological consulting in IT.</p>
