--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
     </nav>
     <section class="news">
         <div class="article" onclick="window.location='article1.html'">
+            <img src="article1_image.jpg" alt="Thumbnail for Note School for Popular Cheatsheets" class="thumbnail">
             <h2>Man Stabbed Near Popular Church</h2>
             <p>Atlanta police are investigating a bizarre stabbing incident involving a ghostly figure...</p>
         </div>
         <div class="article" onclick="window.location='article2.html'">
+            <img src="article2_image.jpg" alt="Thumbnail for Cherry News on Display" class="thumbnail">
             <h2>Chevy Novas on Display</h2>
             <p>A secret society of Chevy Nova enthusiasts is under investigation...</p>
         </div>
         <div class="article" onclick="window.location='article3.html'">
+            <img src="article3_image.jpg" alt="Thumbnail for Popular Programming Languages" class="thumbnail">
             <h2>Popular Programming Languages</h2>
             <p>Experts warn that the rise of a mysterious new programming language might be...</p>
         </div>
         <div class="article" onclick="window.location='article4.html'">
+            <img src="article4_image.jpg" alt="Thumbnail for IT Leaders Losing Faith" class="thumbnail">
             <h2>IT Leaders Losing Faith</h2>
             <p>Recent studies show that IT leaders are turning to fortune tellers for guidance...</p>
         </div>
