add banner and about images

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <a href="about.html" style="color: #fff;">About</a>
     </nav>
     <section>
+        <img src="about_image.jpg" alt="Image of Clippy">
         <h2>Who is Clippy?</h2>
         <p>Clippy is your friendly, helpful assistant, turning the mundane into the extraordinary with a twist of satire and fun! Enjoy the laughs at Clippy's Corner!</p>
     </section>
