--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>Clippy's Corner</header>
+    <header><img src="banner_image.jpg" alt="Clippy's Corner Banner" class="banner"></header>
     <nav>
         <a href="index.html" style="color: #4CAF50;">Home</a>
         <a href="about.html" style="color: #4CAF50;">About</a>
